frontend/production/monospaced-frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: monospaced-frontend
  namespace: monospaced
spec:
  replicas: 1
  selector:
    matchLabels:
      app: monospaced-frontend
  template:
    metadata:
      labels:
        app: monospaced-frontend
    spec:
      nodeSelector:
        nodeRole: worker
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values:
                  - monospaced-frontend
              topologyKey: kubernetes.io/hostname
      containers:
        - name: monospaced-frontend
          image: ghcr.io/rohitpotato/monospaced-stack/frontend:main-f0385ba
          imagePullPolicy: Always
          # env:
          #   - name: NODE_OPTIONS
          #     value: "--max-old-space-size=256"
          #   - name: NEXT_TELEMETRY_DISABLED
          #     value: "1"
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 10
          resources:
            requests:
              memory: "512Mi"
              cpu: "50m"
            limits:
              memory: "768Mi"
              cpu: "200m"
