frontend/production/monospaced-frontend/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: monospaced-frontend
  namespace: monospaced
spec:
  replicas: 2
  selector:
    matchLabels:
      app: monospaced-frontend
  template:
    metadata:
      labels:
        app: monospaced-frontend
    spec:
      volumes:
      - name: nginx-logs
        emptyDir: {}
      - name: exporter-config
        configMap:
          name: nginx-exporter-config
      nodeSelector:
        nodeRole: worker
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values:
                  - monospaced-frontend
              topologyKey: kubernetes.io/hostname
      containers:
        - name: monospaced-frontend
          image: ghcr.io/rohitpotato/monospaced-stack/frontend:main-8aba45a
          imagePullPolicy: Always
          volumeMounts:
          - name: nginx-logs
            mountPath: /var/log/nginx
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 10
          resources:
            requests:
              memory: "50Mi"
              cpu: "30m"
            limits:
              memory: "100Mi"
              cpu: "60m"
        - name: nginxlog-exporter
          image: quay.io/martinhelmich/prometheus-nginxlog-exporter:v1.11.0
          args: ["-config-file", "/etc/prometheus-nginxlog-exporter/config.hcl"]
          ports:
            - name: metrics
              containerPort: 4040
          volumeMounts:
            - name: exporter-config
              mountPath: /etc/prometheus-nginxlog-exporter
            - name: nginx-logs
              mountPath: /var/log/nginx
              readOnly: true
  strategy:
    canary:
      analysis:
        templates:
        - templateName: monospaced-frontend-analysis-template
      canaryService: monospaced-frontend-canary
      stableService: monospaced-frontend-stable
      trafficRouting:
        plugins:
          argoproj-labs/gatewayAPI:
            httpRoute: monospaced-frontend
            namespace: monospaced
      dynamicStableScale: true
      steps:
      - setWeight: 10
      - pause:
          duration: 30
      - setWeight: 30
      - pause:
          duration: 30
      - setWeight: 50
      - pause:
          duration: 30
      - setWeight: 70
      - pause:
          duration: 30
      - setWeight: 90
      - pause:
          duration: 30
      - setWeight: 99
      - pause: {}
      - setWeight: 100
