frontend/production/monospaced-frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: monospaced-frontend-stable
  namespace: monospaced
spec:
  selector:
    app: monospaced-frontend
  ports:
    - name: http
      port: 3000
      targetPort: 3000
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: monospaced-frontend-canary
  namespace: monospaced
spec:
  selector:
    app: monospaced-frontend
  ports:
    - name: http
      port: 3000
      targetPort: 3000
  type: ClusterIP
