frontend/production/monospaced-frontend/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: web-gateway
  namespace: monospaced
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  gatewayClassName: traefik
  listeners:
    - name: https-root
      protocol: HTTPS
      port: 443
      hostname: rohitpotato.xyz
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: rohitpotato-xyz-tls
      allowedRoutes:
        namespaces:
          from: Same
    - name: https-www
      protocol: HTTPS
      port: 443
      hostname: www.rohitpotato.xyz
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: rohitpotato-xyz-tls
      allowedRoutes:
        namespaces:
          from: Same
