frontend/production/monospaced-frontend/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: monospaced-frontend
  namespace: monospaced
spec:
  parentRefs:
    - name: web-gateway
  hostnames:
    - rohitpotato.xyz
    - www.rohitpotato.xyz
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: monospaced-frontend-stable
          port: 3000
          weight: 100
        - name: monospaced-frontend-canary
          port: 3000
          weight: 0
