frontend/production/monospaced-frontend/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: monospaced-frontend
  namespace: monospaced
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`rohitpotato.xyz`) && PathPrefix(`/`)
      kind: Rule
      middlewares:
        - name: redirect-https
          namespace: default
      services:
        - name: monospaced-frontend-traefik-service
          kind: TraefikService
  tls:
    secretName: rohitpotato-xyz-tls
